@@ -1,0 +1,5 @@
+# This file is loaded by tests/Makefile.am.  It contains things that
+# are specific to a given project or even Svn branch.
+
+XFAIL_TESTS +=					\
+long-identifiers.chk
