@@ -1,3 +1,8 @@
+2007-04-02  Akim Demaille  <demaille@gostai.com>
+
+	tests-local.mk
+	* tests-local.mk: New.
+
 2007-04-01  Benoit Sigoure  <tsuna@lrde.epita.fr>
 
 	Forevermore solve bug #146 (compilation on ARM/memory alignment).
